--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
+antlr4-python3-runtime==4.8
 appdirs==1.4.4
+astroid==2.4.1
 attrs==19.3.0
 black==19.10b0
 click==7.1.2
+cycler==0.10.0
+decorator==4.4.2
+edlib==1.3.8.post1
+isort==4.3.21
 joblib==0.15.1
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+matplotlib==3.2.1
+mccabe==0.6.1
+networkx==2.4
 nltk==3.5
+numpy==1.18.4
 pathspec==0.8.0
+pylint==2.5.2
+pyparsing==2.4.7
+python-dateutil==2.8.1
 regex==2020.5.14
+six==1.15.0
+solidity-parser==0.0.7
 toml==0.10.1
 tqdm==4.46.0
 typed-ast==1.4.1
-antlr4-python3-runtime==4.8
-solidity-parser==0.0.7
+wrapt==1.12.1
